# hand-pose-detection

./: .gitignore  .gitmodules  3d_plotting.py  README.md  articles.md  calibration.py  camera_parameters.json  capture_detector.py  detect_hand_pose.py  fixes.txt  gripper_converter.py  hand_env.yaml  hands_env_3.12.yaml  notes.txt  pyproject.toml  read_from_cameras.py  run_detection.py
calibration/: __init__.py  calibration_utils.py  intrinsics_calibration.py  orientation_calibration.py
calibration_data/: add_image_size.py  calibration_R_frames=624_error=0.99089142253755.pkl  orientation_0.pkl  orientation_2.pkl
config/: capture_params.json  charuco_parameters.json  hand_colors.json  hand_connections.json
detection/: __init__.py  capture_detector.py  run_detection.py
errors/: errors.csv  plot_errors.py
gripper_conversion/: __init__.py  basic_gripper_converter.py  dummy_gripper_converter.py  gripper_converter.py  gripper_converter_interface.py  test_gripper_converter.py
hand_config/: hand_colors.json  hand_connections.json
latex-text/: build.sh  installed_texlive_packages.txt  latexmkrc  main.tex  pacman-pkglist.txt  sources.bib
positioning/: __init__.py  camera_positioning.py  debugging_triangulator.ipynb  notes.txt  run_hand_positioning.py  run_positioning.py  triangulator.py
src/: intrinsics_calibration.py  orientation_calibration.py  run_detection.py  run_hand_positioning.py
utils/: 3d_visualizer.py  __init__.py  calibration_utils.py  camera_opener.py  capture_opener.py  confirmation.py  draw_results.py  draw_utils.py  file_utils.py  general_utils.py  (+2 more)
(+15 files in other folders)
